@@ -1,4 +1,4 @@
-/* $Id: segment.c,v 1.3 2003-10-10 09:36:35 btb Exp $ */
+/* $Id: segment.c,v 1.4 2005-06-22 09:08:21 chris Exp $ */
 
 /*
  *
@@ -15,7 +15,7 @@
 #include "cfile.h"
 
 #ifdef RCS
-static char rcsid[] = "$Id: segment.c,v 1.3 2003-10-10 09:36:35 btb Exp $";
+static char rcsid[] = "$Id: segment.c,v 1.4 2005-06-22 09:08:21 chris Exp $";
 #endif
 
 #ifndef FAST_FILE_IO
@@ -57,3 +57,31 @@ void dl_index_read(dl_index *di, CFILE *fp)
 	di->index = cfile_read_short(fp);
 }
 #endif
+
+void segment2_write(segment2 *s2, PHYSFS_file *fp)
+{
+	PHYSFSX_writeU8(fp, s2->special);
+	PHYSFSX_writeU8(fp, s2->matcen_num);
+	PHYSFSX_writeU8(fp, s2->value);
+	PHYSFSX_writeU8(fp, s2->s2_flags);
+	PHYSFSX_writeFix(fp, s2->static_light);
+}
+
+void delta_light_write(delta_light *dl, PHYSFS_file *fp)
+{
+	PHYSFS_writeSLE16(fp, dl->segnum);
+	PHYSFSX_writeU8(fp, dl->sidenum);
+	PHYSFSX_writeU8(fp, dl->dummy);
+	PHYSFSX_writeU8(fp, dl->vert_light[0]);
+	PHYSFSX_writeU8(fp, dl->vert_light[1]);
+	PHYSFSX_writeU8(fp, dl->vert_light[2]);
+	PHYSFSX_writeU8(fp, dl->vert_light[3]);
+}
+
+void dl_index_write(dl_index *di, PHYSFS_file *fp)
+{
+	PHYSFS_writeSLE16(fp, di->segnum);
+	PHYSFSX_writeU8(fp, di->sidenum);
+	PHYSFSX_writeU8(fp, di->count);
+	PHYSFS_writeSLE16(fp, di->index);
+}
